test/files/neg/saferJavaConversions.check
saferJavaConversions.scala:13: error: type mismatch;
 found   : "a".type (with underlying type String)
 required: Foo
    val v = map.get("a")  // now this is a type error
                    ^
one error found
